FLAC Decoder Issues.
The FLAC decoder does not display time. There are also several other issues that have been reported.
http://forum.videolan.org/viewtopic.php?t=36666
The FLAC decoder does not display time. There are also several other issues that have been reported.
http://forum.videolan.org/viewtopic.php?t=36666
added Component::Decoders Severity::normal Type::bug + 1 deleted label
changed milestone to %Bugs paradize
(In [20359]) Implemented (close #1194 (closed)):
added Status::fixed label
closed
This ticket needs to be reopened as there are still some issues.
http://forum.videolan.org/viewtopic.php?t=36666&start=15
Original author: dj
removed Status::fixed label
reopened
assigned to @fenrir and unassigned @MigrationBot
(In [20396]) Fixed flac packetizer when compiling with libflac (close #1194 (closed) again ;)
added Status::fixed label
closed
changed milestone to %1.0 feature freeze
VideoLAN code repository instance