Implemented (close #1194):  - time/duration display  - meta info parsing.  - seek (precise seek if SEEKTABLE presents) Resampling can still happen but I think it has to do with the decoder(at least with our ffmpeg wrapper, I haven't tested the native one).